# nonebot-plugin-permission

./: .gitignore  README.md  pyproject.toml
src/nonebot_plugin_permission/: __init__.py  checker.py  config.py  main.py  model.py  monitor.py  params.py  store.py
src/nonebot_plugin_permission/command/: __init__.py  config.py
src/nonebot_plugin_permission/migrations/: d6d9c2bbb3a2_upgrade_cithun_v1_4.py  d7f57cd387ff_init.py  e5927f73764b_upgrade_cithun.py
tests/: conftest.py  test_store.py
