[project]
name = "nonebot-plugin-permission"
version = "0.1.4"
description = "Permission Plugin based on Arclet Cithun"
authors = [
    {name = "rf_tar_railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "nonebot2>=2.5.0",
    "nonebot-plugin-orm>=0.8.3",
    "arclet-cithun>=1.3.0",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-user>=0.5.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/nonebot_plugin_permission"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = false
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.ruff.lint.isort]
length-sort = false
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pdm.scripts]
format = { composite = ["ruff check --select I --fix ./src/","black ./src/","ruff check ./src/"] }

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []
[tool.nonebot.plugins]
"@local" = ["nonebot_plugin_permission"]


[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "ruff>=0.15.13",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi,uvicorn]>=2.5.0",
    "nonebot-plugin-orm[aiosqlite]>=0.8.3",
]
